WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196301
AVAudioSessionRouteSharingPolicyLongForm has been deprecated
https://bugs.webkit.org/show_bug.cgi?id=196301
Summary
AVAudioSessionRouteSharingPolicyLongForm has been deprecated
Eric Carlson
Reported
2019-03-27 09:51:54 PDT
AVAudioSessionRouteSharingPolicyLongForm has been deprecated
Attachments
Patch
(2.33 KB, patch)
2019-03-27 10:02 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2019-03-27 09:52:08 PDT
<
rdar://problem/49286833
>
Eric Carlson
Comment 2
2019-03-27 10:02:28 PDT
Created
attachment 366077
[details]
Patch
EWS Watchlist
Comment 3
2019-03-27 10:05:01 PDT
Attachment 366077
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/audio/ios/AudioSessionIOS.mm:126: Non-label code inside switch statements should be indented. [whitespace/indent] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryan Haddad
Comment 4
2019-03-27 11:23:31 PDT
Comment on
attachment 366077
[details]
Patch I took care of this in
https://trac.webkit.org/r243552
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug