AVAudioSessionRouteSharingPolicyLongForm has been deprecated https://bugs.webkit.org/show_bug.cgi?id=196301

Unrereivewed build fix.

* platform/audio/ios/AudioSessionIOS.mm:
(WebCore::AudioSession::setCategory):
(WebCore::AudioSession::routeSharingPolicy const):

Canonical link: https://commits.webkit.org/210600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243552 268f45cc-cd09-0410-ab3c-d52691b4dbfc